; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp.c_pgp_get_cipher_key_size.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp.c_pgp_get_cipher_key_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cipher_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pgp_get_cipher_key_size(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.cipher_info*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call %struct.cipher_info* @get_cipher_info(i32 %5)
  store %struct.cipher_info* %6, %struct.cipher_info** %4, align 8
  %7 = load %struct.cipher_info*, %struct.cipher_info** %4, align 8
  %8 = icmp ne %struct.cipher_info* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load %struct.cipher_info*, %struct.cipher_info** %4, align 8
  %11 = getelementptr inbounds %struct.cipher_info, %struct.cipher_info* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %2, align 4
  br label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %9
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local %struct.cipher_info* @get_cipher_info(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
